--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -1,7 +1,24 @@
 <!doctype html>
 <html lang="vi" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:replace="~{fragments/my-fragments.html::link}"/>
+<!--    <div th:replace="~{fragments/my-fragments.html::link}"/>-->
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Fresh Shop</title>
+
+    <!-- Site Icons -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Site CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 <div th:replace="~{fragments/my-fragments.html::header(${currentPage})}"/>
@@ -10,7 +27,8 @@
 <div id="slides-shop" class="cover-slides">
     <ul class="slides-container">
         <li class="text-center">
-            <img src="images/banner-01.jpg" alt="">
+<!--            <img th:src="images/banner-01.jpg" alt="">-->
+            <img src="/images/banner-01.jpg" alt="" th:src="@{/images/banner-01.jpg}">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
