--- a/resources/templates/fragments/my-fragments.html
+++ b/resources/templates/fragments/my-fragments.html
@@ -59,7 +59,7 @@
                         <li class="dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
                                 <th:block th:if="${username != null}">
-                                    <span th:text="Xin chào, ${username}"></span>
+                                    <span th:utext="Xin chào, ${username}"></span>
                                 </th:block>
                                 <i class="fa fa-user" id="user"></i>
                             </a>
@@ -231,7 +231,7 @@
     <!-- End copyright  -->
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
 
-    <div th:replace="::script"></div>
+    <div th:replace="~{::script}"></div>
 
 </div>
 
@@ -242,43 +242,44 @@
     <title>Fresh Shop</title>
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" th:href="@{images/favicon.ico}" type="image/x-icon">
+    <link rel="apple-touch-icon" th:href="@{images/apple-touch-icon.png}">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+
     <!-- Site CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" th:href="@{css/style.css}">
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" th:href="@{css/responsive.css}">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" th:href="@{css/custom.css}">
 
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script th:src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script th:src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js}"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </div>
 
 <div th:fragment="script">
     <!-- ALL JS FILES -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js" th:src="@{/js/jquery-3.2.1.min.js}"></script>
+    <script src="js/popper.min.js" th:src="@{js/popper.min.js}"></script>
+    <script src="js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
     <!-- ALL PLUGINS -->
-    <script src="js/jquery.superslides.min.js"></script>
-    <script src="js/bootstrap-select.js"></script>
-    <script src="js/inewsticker.js"></script>
-    <script src="js/bootsnav.js"></script>
-    <script src="js/images-loded.min.js"></script>
-    <script src="js/isotope.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/baguetteBox.min.js"></script>
-    <script src="js/form-validator.min.js"></script>
-    <script src="js/contact-form-script.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="js/myjs.js"></script>
+    <script src="js/jquery.superslides.min.js" th:src="@{js/jquery.superslides.min.js}"></script>
+    <script src="js/bootstrap-select.js" th:src="@{js/bootstrap-select.js}"></script>
+    <script src="js/inewsticker.js" th:src="@{js/inewsticker.js}"></script>
+    <script src="js/bootsnav.js" th:src="@{js/bootsnav.js}"></script>
+    <script src="js/images-loded.min.js" th:src="@{js/images-loded.min.js}"></script>
+    <script src="js/isotope.min.js" th:src="@{js/isotope.min.js}"></script>
+    <script src="js/owl.carousel.min.js" th:src="@{js/owl.carousel.min.js}"></script>
+    <script src="js/baguetteBox.min.js" th:src="@{js/baguetteBox.min.js}"></script>
+    <script src="js/form-validator.min.js" th:src="@{js/form-validator.min.js}"></script>
+    <script src="js/contact-form-script.js" th:src="@{js/contact-form-script.js}"></script>
+    <script src="js/custom.js" th:src="@{js/custom.js}"></script>
+    <script src="js/myjs.js" th:src="@{js/myjs.js}"></script>
 </div>
 
