--- a/resources/templates/shop.html
+++ b/resources/templates/shop.html
@@ -1,12 +1,30 @@
 <!doctype html>
 <html lang="vi" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:replace="~{fragments/my-fragments.html::link}"/>
+    <!--    <div th:replace="~{fragments/my-fragments.html::link}"/>-->
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Fresh Shop</title>
+
+    <!-- Site Icons -->
+    <link rel="shortcut icon" th:href="@{images/favicon.ico}" type="image/x-icon">
+    <link rel="apple-touch-icon" th:href="@{images/apple-touch-icon.png}">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+
+    <!-- Site CSS -->
+    <link rel="stylesheet" th:href="@{css/style.css}">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" th:href="@{css/responsive.css}">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" th:href="@{css/custom.css}">
 </head>
 <body>
 <div th:replace="~{fragments/my-fragments.html::header(${currentPage})}"/>
 
-<th:block th:with="productList=${requestScope.products}" scope="request">
+<th:block th:with="productList=${products}">
     <!-- Start All Title Box -->
     <div class="all-title-box">
         <div class="container">
@@ -42,7 +60,8 @@
                                         <option value="4">Giảm giá</option>
                                     </select>
                                 </div>
-                                <p id="number-of-result">Đang hiện ${productList.size()} kết quả</p>
+                                <p id="number-of-result">Đang hiện <span th:text="${productList.size()}"></span> kết quả
+                                </p>
                             </div>
                         </div>
 
@@ -57,12 +76,12 @@
 
                                                     <div class="type-lb">
                                                         <p th:if="${pro.getStatus() != null || pro.getStatus() != ''}"
-                                                           class="status-param sale">${pro.getStatus()}</p>
+                                                           class="status-param sale" th:text="${pro.getStatus()}"></p>
                                                     </div>
 
-                                                    <img src="${pro.getImages().get(0)}"
-                                                         class="img-fluid image-param"
-                                                         alt="Image">
+                                                    <img th:src="${pro.images[0].getUrl()}"
+                                                         class="img-fluid image-param" alt="Image">
+
                                                     <div class="mask-icon">
                                                         <th:block th:if="${username!=null}">
                                                             <a class="cart" style="cursor: pointer"
@@ -81,21 +100,18 @@
                                                         </th:block>
                                                     </div>
                                                 </div>
-                                                <a class="id-param" href="product-detail?id=${pro.getId()}"
+                                                <a class="id-param" th:href="@{/product-detail(id=${pro.id})}" href="#"
                                                    style="cursor: pointer;">
                                                     <div class="why-text" style="height: 113px"
-                                                         th:with="check=${pro.getDiscountedPrice()==0||pro.getDiscountedPrice()==pro.getPrice()},
-                                                             price=0">
-                                                        <h4 class="name-param">${pro.getName()}</h4>
-                                                        <th:block>
-                                                            <div th:if="${check}">
-                                                                <div th:with="price=${pro.getPrice()}"/>
+                                                         th:with="check=${pro.getDiscountedPrice()==0||pro.getDiscountedPrice()==pro.getPrice()}">
+                                                        <h4 class="name-param" th:text="${pro.getName()}"></h4>
+                                                        <h5 class="price-param">
+                                                            <div th:if="${check}"><span th:text="${pro.getPrice()}"/>đ
                                                             </div>
-                                                            <div th:unless="${check}">
-                                                                <div th:with="price=${pro.getDiscountedPrice()}"/>
+                                                            <div th:unless="${check}"><span
+                                                                    th:text="${pro.getDiscountedPrice()}"/>đ
                                                             </div>
-                                                        </th:block>
-                                                        <h5 class="price-param">${price}đ</h5>
+                                                        </h5>
                                                     </div>
                                                 </a>
                                             </div>
@@ -121,8 +137,9 @@
                             <div class="list-group list-group-collapse list-group-sm list-group-tree"
                                  id="list-group-men"
                                  data-children=".sub-men" style="overflow: scroll; height: 400px">
-                                <a th:each="category:${requestScope.categories}" href="category?id=${category.getId()}">${category.getName()}
-                                    <small class="text-muted"><strong>(${category.getQuantity()})</strong></small>
+                                <a th:each="category:${categories}" th:href="@{/category(id=${category.getId()})}"
+                                   th:text="${category.getName()}">
+                                    <small class="text-muted"><strong>(<span th:text="${category.getQuantity()}"></span>)</strong></small>
                                 </a>
                             </div>
                         </div>
@@ -151,7 +168,6 @@
     </div>
     <!-- End Shop Page -->
 </th:block>
-<div th:replace="~{fragments/my-fragments.html::footer}"/>
-<div th:replace="~{fragments/my-fragments.html::script}"/>
+<div th:replace="~{fragments/my-fragments::footer}"/>
 </body>
 </html>
