--- a/resources/templates/about.html
+++ b/resources/templates/about.html
@@ -1,7 +1,25 @@
 <!doctype html>
 <html lang="vi" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:replace="~{fragments/my-fragments.html::link}"/>
+<!--    <div th:replace="~{fragments/my-fragments.html::link}"/>-->
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Fresh Shop</title>
+
+    <!-- Site Icons -->
+    <link rel="shortcut icon" th:href="@{images/favicon.ico}" type="image/x-icon">
+    <link rel="apple-touch-icon" th:href="@{images/apple-touch-icon.png}">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+
+    <!-- Site CSS -->
+    <link rel="stylesheet" th:href="@{css/style.css}">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" th:href="@{css/responsive.css}">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" th:href="@{css/custom.css}">
 </head>
 <body>
 <div th:replace="~{fragments/my-fragments.html::header(${currentPage})}"/>
@@ -98,7 +116,7 @@
                 <div class="hover-team">
                     <div class="our-team"><img src="images/img-3.jpg" alt=""/>
                         <div class="team-content">
-                            <h3 class="title">Đặng Thế Vũ</h3> <span class="post">Web Developer</span></div>
+                            <h3 class="title">Nguyễn Đặng Duy Khánh</h3> <span class="post">Web Developer</span></div>
                         <ul class="social">
                             <li>
                                 <a href="#" class="fab fa-facebook"></a>
@@ -127,6 +145,5 @@
 <!-- End About Page -->
 
 <div th:replace="~{fragments/my-fragments.html::footer}"/>
-<div th:replace="~{fragments/my-fragments.html::script}"/>
 </body>
 </html>
